--- a/guigasblog/_layouts/guigas.html
+++ b/guigasblog/_layouts/guigas.html
@@ -1,9 +1,9 @@
 ---
 layout: wrapper
+guy: "Guilherme Batista Bastos"
 ---
 
-<h1>Guigas template</h1>
-
+<h1>{{ page.title }}</h1>
 <hr>
-
+<h3>{{ layout.guy }} - {{ page.guy }}</h3>
 {{ content }}
