Learning variables, includes and loops

--- a/guigasblog/_layouts/wrapper.html
+++ b/guigasblog/_layouts/wrapper.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <h2> Wrapper </h2>
+  {% include header.html color="tomato" %}
   {{ content }}
   <h3> wrapper </h3>
 </body>
